# ui_sandbox

./: .cursorrules  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build_vs.bat  vcpkg.json
.cursor/: animator_tears_analysis.md
.cursor/rules/: build-directory.mdc
.github/workflows/: ci.yml
cmake/: SlangVerifyCombo.cmake
docs/: EFFECTS.md  EFFECTS_LIBRARY_ROADMAP.md  FIGMA_GRADIENT.md
overlay-ports/imgui/: CMakeLists.txt  portfile.cmake  vcpkg.json
src/apps/: CMakeLists.txt
src/apps/sample_editor/: CMakeLists.txt  editor_layout.h  main.cpp  panels.h
src/apps/ui_sandbox/: APPROACH.md  CMakeLists.txt  editor_layout.h  font_setup.cpp  font_setup.h  icons.h  main.cpp  panels.h  sandbox_theme.h  ui_helpers.h
src/libs/: CMakeLists.txt
src/libs/drui/: CMakeLists.txt  README.md  fonts.cpp
src/libs/drui/drui/: drui.h  icons.h  theme.h  toast.h  widgets.h
src/libs/ui_sandbox_effects/: CMakeLists.txt  figma_gradient.cpp  hotreload.cpp  preview.cpp  registry.cpp  shader_disk_io.cpp  shader_disk_io.hpp  shader_sources_config.hpp.in  shaders.cpp
src/libs/ui_sandbox_effects/include/ui_sandbox_effects/: builtin_effect_specs.hpp  figma.hpp  hotreload.hpp  preview.hpp  registry.hpp  shaders.hpp  ui_sandbox_effects.hpp
src/libs/ui_sandbox_shaders/: CMakeLists.txt  shader_manifest.cmake
src/libs/ui_sandbox_shaders/shaders/: imgui_post_vertex.slang
src/libs/ui_sandbox_shaders/shaders/post/: _post_common.slang  chromatic.slang  figma_fill.slang  grayscale.slang  invert.slang  pixelate.slang  scanlines.slang  sepia.slang
toolchain/vcpkg-overlay/: README.md
toolchain/vcpkg-overlay/ports/cmakerc/: portfile.cmake  usage
toolchain/vcpkg-overlay/ports/shader-slang/: 0002-slangc-no-memleak-assert.patch  0003-vcpkg-system-glslang-spirv-targets.patch  0004-slang-glslang-vcpkg-glslang-spirv-include.patch  portfile.cmake  slangTargets.cmake  vcpkg.json
